# agent-health-cc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent_health_cc/: README.md  pyproject.toml
agent_health_cc/src/agent_health_cc/: main.py
agent_health_cc/src/agent_health_cc/config/: agents.yaml
agent_health_cc/src/agent_health_cc/tools/: __init__.py
src/health_assistant/: __init__.py  crew.py  example.py  main.py
src/health_assistant/agents/: __init__.py  food_vision_agent.py  nutrition_agent.py
src/health_assistant/config/: agents.yaml  tasks.yaml
src/health_assistant/llm/: __init__.py  qwen.py  qwen_vl.py
src/health_assistant/tools/: calorie_tool.py
