[project]
name = "agent_health_cc"
version = "0.1.0"
description = "Agent_health_cc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.13.0"
]

[project.scripts]
agent_health_cc = "agent_health_cc.main:run"
run_crew = "agent_health_cc.main:run"
train = "agent_health_cc.main:train"
replay = "agent_health_cc.main:replay"
test = "agent_health_cc.main:test"
run_with_trigger = "agent_health_cc.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
